--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=`, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width", initial-scale=1.0">
     <title>Focus Time</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body id="bg">
 <header class="header">
     <div class="container">
         <div class="month"></div>
