--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body id="bg">
 <header class="header">
     <div class="container">
+        <div class="time-container">
         <div class="month"></div>
         <div class="days-of-week"></div>
         <div class="today"></div>
@@ -22,8 +23,19 @@
     <main class="main">
         <div class="container">
             <div class="time"></div>
+            <div class="to-do">
+                <h2>What are your tasks today?</h2>
+                <input id="tasks" type="text">
+                <input id="submitBtn" type="submit">
+            </div>
+            </div>
+            <div class="to-do-list">
+                <ul class="list-store">
+                </ul>
+            </div>
         </div>
     </main>
+
 
     <script src="./app.js"></script>
 </body>
