--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             <div class="time"></div>
             <div class="to-do">
                 <h2>What are your tasks today?</h2>
+                <div class="input-container">
                 <input id="tasks" type="text">
-                <input id="submitBtn" type="submit">
+                <input class="sbm" id="submitBtn" value=">" type="submit">
+            </div>
             </div>
             </div>
             <div class="to-do-list">
